Provider implemented with a few tests

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
+        
+        <provider
+            android:authorities="com.example.khumalo.sunshine.app"
+            android:name=".data.WeatherProvider"/>
+
+
+
     </application>
 
 </manifest>
