--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/ForecastTheme"
             android:label="@string/app_name"
             >
             <intent-filter>
@@ -73,6 +72,7 @@
         <service
             android:name=".sync.SunshineSyncService"
             android:exported="true"
+            android:parentActivityName=".MainActivity">
             >
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
